# amazon-kinesis-video-streams-producer-sdk-cpp

./: CMakeLists.txt
CMake/: Utilities.cmake
kinesis-video-gstreamer-plugin/src/: gstkvssink.cpp
